# TabViz

./: .gitignore  README.md  pyproject.toml  setup.py  tabviz.py
.github/workflows/: tabviz.yml
tabviz/: __init__.py  __main__.py  tabvizmain.py
tabviz/static/: example.twbx
